binding: Supports V8PrivateProperty::getOrUndefined.

Adds getOrUndefined() as a fast version of get() for the clients
that do not need to care about the difference between
a) the private property has not yet been set, and
b) the private property was intentionally set to undefined.

BUG=616618

Review-Url: https://codereview.chromium.org/2035713002
Cr-Commit-Position: refs/heads/master@{#397401}

Former-commit-id: c6cada593b5b731a615f6d66f96586f37e86e2d4